--- a/css/results.css
+++ b/css/results.css
@@ -1,6 +1,6 @@
 body {
     background-color: #EAF8FF;
-    background-image: url("../Images/bk.png");
+    background-image: url("../Images/background.png");
     background-position: top center;
     background-repeat: no-repeat;
   }
