--- a/css/questions.css
+++ b/css/questions.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../Images/bk.png");
+    background-image: url("../Images/background.png");
     background-position: top center;
     background-repeat: no-repeat;
 }
